force-app/main/default/objects/Async_Rides__c/Async_Rides__c.object-meta.xml
<CustomObject>
    <label>Async Ride</label>
    <nameField>
        <displayFormat>AR-{00000}</displayFormat>
        <label>Async Ride Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Async Rides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>