force-app/main/default/objects/Async_Rides__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Async Rides</relationshipLabel>
    <relationshipName>Async_Rides</relationshipName>
    <type>Lookup</type>
</CustomField>