force-app/main/default/objects/Async_Rides__c/fields/Rental_Unit__c.field-meta.xml
<CustomField>
    <fullName>Rental_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rental Unit</label>
    <referenceTo>Rental_Unit__c</referenceTo>
    <relationshipLabel>Async Rides</relationshipLabel>
    <relationshipName>Async_Rides</relationshipName>
    <type>Lookup</type>
</CustomField>